# loud-typing

./: .envrc  Cargo.toml  README.md  devshell.nix  flake.nix
src/: main.rs  player.rs
