[package]
name = "villager-noises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17"
time = "0.3"
rand = "0.8"
metadata = { git = "https://github.com/D3faIt/metadata.git", features = ["static"] }
espanso-detect = {path = "libs/espanso-detect"}