[package]
name = "loud-typing"
version = "0.1.0"
edition = "2021"
authors = ["Aadniz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17"
time = "0.3"
rand = "0.8"
espanso-detect = {path = "libs/espanso-detect"}
clap = { version = "4.4.10", features = ["derive"] }
